[package]
name = "avior_infuser_lib"
version = "0.1.0"
authors = ["Sam <earthstamper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "1.2.1"
default-features = false
features = ["sync"]

[dependencies]
serde = "1.0.125"
serde_json = "1.0"
gethostname = "0.2.1"
bson = "1.2.2"
