[package]
authors = ["Sam <earthstamper@gmail.com>"]
edition = "2018"
name = "avior_infuser_lib"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "1.2.1"

[dependencies]
bson = "1.2.2"
chrono = "0.4.19"
serde = "1.0.125"
serde_json = "1.0"
